--- a/config_sample.env
+++ b/config_sample.env
@@ -1,12 +1,13 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "" # Enter your telegram bot token
-OWNER_ID = "" # Enter your telegram user id
-TELEGRAM_API = "" # Enter telegram API key
-TELEGRAM_HASH = "" # Enter telegram API hash
+BOT_TOKEN = "8156614682:AAH2a_LWVCNGobMckfW4Ww_mLFdCC2EssS8" # Enter your telegram bot token
+OWNER_ID = "7434245831" # Enter your telegram user id
+TELEGRAM_API = "25956970" # Enter telegram API key
+TELEGRAM_HASH = "5fb73e6994d62ba1a7b8009991dd74b6
+ 25956970" # Enter telegram API hash
 
 # OPTIONAL CONFIG
 AUTHORIZED_CHATS = "" # Enter telegram chat id to authorize it
-SUDO_USERS = "" # Enter telegram user id for sudo access
+SUDO_USERS = "1074804932,1077880102" # Enter telegram user id for sudo access
 
 DATABASE_URL = "" # Enter mongo database URL for python 3.12 or higher
 USER_SESSION_STRING = "" # Check readme to learn how to generate this
@@ -48,14 +49,14 @@ MEGA_PASSWORD = ""
 # Sabnzbd
 USENET_SERVERS = "[{'name': 'main', 'host': '', 'port': 5126, 'timeout': 60, 'username': '', 'password': '', 'connections': 8, 'ssl': 1, 'ssl_verify': 2, 'ssl_ciphers': '', 'enable': 1, 'required': 0, 'optional': 0, 'retention': 0, 'send_group': 0, 'priority': 0}]"
 # Update
-UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
+UPSTREAM_REPO = "https://github.com/MinuteCodingsTelugu/x"
 UPSTREAM_BRANCH = "main"
 
 # Leech Settings
-AS_DOCUMENT = "False" # True or False
+AS_DOCUMENT = "True" # True or False
 LEECH_SPLIT_SIZE = "" # Enter only numbers in bytes
-LEECH_FILENAME_PREFIX = "Zee | "
-LEECH_FILENAME_SUFFIX = " | Zee"
+LEECH_FILENAME_PREFIX = "@PspkBots"
+LEECH_FILENAME_SUFFIX = "@PspkBots"
 LEECH_CAPTION_FONT = "bold" # Options: b, i, u, bi, bu, iu, biu, mono
 EQUAL_SPLITS = "False" # True or False
 MEDIA_GROUP = "False" # True or False
@@ -63,7 +64,7 @@ USER_TRANSMISSION = "True" # True or False
 MIXED_LEECH = "True" # True or False
 USER_LEECH_DESTINATION = "PM" # PM or DM or chat_id
 NAME_SUBSTITUTE = ""
-METADATA_TXT = ""
+METADATA_TXT = "@PspkBots"
 META_ATTACHMENT = ""
 THUMBNAIL_LAYOUT = "" # Options: 2x2 or 3x3 or 2x4 or 4x4
 
@@ -96,9 +97,9 @@ DISABLE_SEED = "False" # True or False
 DISABLE_LEECH = "False" # True or False
 
 # Chat IDs
-FSUB_IDS = "" # Enter channel id for force subscribe
-LOG_CHAT_ID = "" # Enter channel id for task logs
-DUMP_CHAT_ID = "" # Enter channel id for leech dump
+FSUB_IDS = "-1001533796760" # Enter channel id for force subscribe
+LOG_CHAT_ID = "-1002578247466" # Enter channel id for task logs
+DUMP_CHAT_ID = "-1002626999649" # Enter channel id for leech dump
 
 #Limits
 STORAGE_THRESHOLD = "1" # Enter only numbers in GB
