--- a/config_sample.env
+++ b/config_sample.env
@@ -9,7 +9,7 @@ TELEGRAM_HASH = "5fb73e6994d62ba1a7b8009991dd74b6
 AUTHORIZED_CHATS = "" # Enter telegram chat id to authorize it
 SUDO_USERS = "1074804932,1077880102" # Enter telegram user id for sudo access
 
-DATABASE_URL = "" # Enter mongo database URL for python 3.12 or higher
+DATABASE_URL = "mongodb+srv://xleech:xleech@cluster0.vti9kx6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" # Enter mongo database URL for python 3.12 or higher
 USER_SESSION_STRING = "" # Check readme to learn how to generate this
 
 # Optional API
