--- a/config.env
+++ b/config.env
@@ -1,9 +1,8 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "8156614682:AAH2a_LWVCNGobMckfW4Ww_mLFdCC2EssS8" # Enter your telegram bot token
 OWNER_ID = "7434245831" # Enter your telegram user id
-TELEGRAM_API = "25956970" # Enter telegram API key
-TELEGRAM_HASH = "5fb73e6994d62ba1a7b8009991dd74b6
- 25956970" # Enter telegram API hash
+TELEGRAM_API = "" # Enter telegram API key
+TELEGRAM_HASH = "8a714c643f86acb3d07a2baa4831f95b" # Enter telegram API hash
 
 # OPTIONAL CONFIG
 AUTHORIZED_CHATS = "" # Enter telegram chat id to authorize it
