--- a/config.env
+++ b/config.env
@@ -83,7 +83,7 @@ INCOMPLETE_TASK_NOTIFIER = "True" # True or False
 EXTENSION_FILTER = "index html"
 YT_DLP_OPTIONS = ""
 SET_COMMANDS = "True" # True or False
-CMD_SUFFIX = "z"
+CMD_SUFFIX = "1"
 DEFAULT_UPLOAD = "gd"
 STATUS_LIMIT = "5" # Enter only numbers
 STATUS_UPDATE_INTERVAL = "11" # Enter only numbers in seconds
